--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "debugbear": "^2.0.14",
     "lodash": "^4.17.20",
     "netlify": "^4.3.12",
     "netlify-build-plugin-debugbear": "^1.0.1",
